package dev.mobile.medicalink.fragments.traitements.builderTreatment

interface Builder {
}