package dev.mobile.medicalink.fragments.traitements.builderTreatment

class SubstanceBuilder : BaseBuilder() {
}