package dev.mobile.medicalink.fragments.traitements.builderTreatment

class TextBuilder : BaseBuilder() {
}