package dev.mobile.medicalink.fragments.traitements.builderTreatment

class TextTreatment : Treatment() {
}