package dev.mobile.medicalink.fragments.traitements.builderTreatment

open class Treatment {
}